Show failed transactions

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -196,6 +196,12 @@
                                 </a>
                             </li>
                             <li>
+                                <a asp-page="/FailedTransactions/Index">
+                                    <span class="icon is-small"><i class="fas fa-bug"></i></span>
+                                    <span class="menu-text">Failed Txs</span>
+                                </a>
+                            </li>
+                            <li>
                                 <a asp-page="/TxPool/Index">
                                     <span class="icon is-small"><i class="fas fa-water"></i></span>
                                     <span class="menu-text">Tx Pool</span>
