Add link to debugger for failed transactions

--- a/src/Tippy/Pages/Debugger/Details.cshtml
+++ b/src/Tippy/Pages/Debugger/Details.cshtml
@@ -22,7 +22,7 @@
             <div class="field">
                 <label class="label">Upload a binary to replace this script.</label>
                 <div class="control">
-                    <input asp-for="FilePath" class="input is-info" type="text" placeholder="File Path" />
+                    <input asp-for="FilePath" class="input is-info" type="text" placeholder="Absolute File Path" />
                 </div>
             </div>
             <div class="field">
