--- a/src/Tippy/Pages/FailedTransactions/Details.cshtml
+++ b/src/Tippy/Pages/FailedTransactions/Details.cshtml
@@ -24,6 +24,36 @@
 
         <div class="column is-2">
             <label>Raw Data</label>
+
+            <hr />
+            <div class="columns is-multiline">
+                @if (Model.IsDebuggerSupported)
+                {
+                        @foreach (var (input, index) in Model.DisplayInputs.Select((o, i) => (o, i)))
+                        {
+                            <div class="column is-10">
+                                <a asp-page="/Debugger/Details" asp-route-txId="@Model.ID" asp-route-ioIndex="@index" asp-route-ioType="input" asp-route-scriptType="0" class="button">Debug Input @index Lock</a>
+                            </div>
+
+                            <div class="column is-10">
+                                @if (input.Type != null)
+                                {
+                                    <a asp-page="/Debugger/Details" asp-route-txId="@Model.ID" asp-route-ioIndex="@index" asp-route-ioType="input" asp-route-scriptType="1" class="button">Debug Input @index Type</a>
+                                }
+                            </div>
+                        }
+
+                        @foreach (var (output, index) in Model.DisplayOutputs.Select((o, i) => (o, i)))
+                        {
+                            <div class="column is-10">
+                                @if (Model.ParsedTransaction!.Outputs[index].Type != null)
+                                {
+                                    <a asp-page="/Debugger/Details" asp-route-txId="@Model.ID" asp-route-ioIndex="@index" asp-route-ioType="output" asp-route-scriptType="1" class="button">Debug Output @index Type</a>
+                                }
+                            </div>
+                        }
+                }
+            </div>
         </div>
         <div class="column is-10">
             <pre><code>@Html.Raw(Model.RawTransaction.Replace("\r\n", "<br />"))</code></pre>
