--- a/src/Tippy/Pages/Transactions/Details.cshtml
+++ b/src/Tippy/Pages/Transactions/Details.cshtml
@@ -69,22 +69,6 @@
     <div id="inputs">
         @foreach (var (input, index) in Model.TransactionDetail.DisplayInputs.Select((o, i) => (o, i)))
         {
-            @if (Model.IsDebuggerSupported)
-            {
-                <div class="columns">
-                    <div class="column is-12">
-                        <a asp-page="/Debugger/Details" asp-route-txHash="@Model.Transaction.Hash" asp-route-ioIndex="@index" asp-route-ioType="input" asp-route-scriptType="0" class="button">Debug Lock Script</a>
-
-                       @if (input.Type != null)
-                        {
-                             <a asp-page="/Debugger/Details" asp-route-txHash="@Model.Transaction.Hash" asp-route-ioIndex="@index" asp-route-ioType="input" asp-route-scriptType="1" class="button">Debug Type Script</a>
-                        }
-
-                        <Partial name="_DebuggerInfo" />
-                    </div>
-                </div>
-            }
-
             @if (input.FromCellbase)
             {
                 <div class="columns">
@@ -148,6 +132,63 @@
                     </div>
                     <div class="column is-10">
                         <span>@Tippy.Helpers.NumberHelper.CkbAmount(input.OccupiedCapacity ?? "0")</span>
+                    </div>
+
+                    <div class="column is-2">
+                        Lock Script
+                    </div>
+                    @if (Model.IsDebuggerSupported)
+                    {
+                        <div class="column is-10">
+                            <a asp-page="/Debugger/Details" asp-route-txHash="@Model.Transaction.Hash" asp-route-ioIndex="@index" asp-route-ioType="input" asp-route-scriptType="0" class="button">Debug this script</a>
+                            <Partial name="_DebuggerInfo" />
+                        </div>
+                    }
+                    <div class="column is-12">
+                        @{ var lockScript = input.Lock!; }
+                        <pre>
+{
+    code_hash: @lockScript.CodeHash,
+    args: @lockScript.Args,
+    hash_type: @lockScript.HashType
+}</pre>
+                    </div>
+
+                    @{ var typeScript = input.Type; }
+                    <div class="column is-2">
+                        Type Script
+                    </div>
+                    @if (typeScript != null)
+                    {
+                        @if (Model.IsDebuggerSupported)
+                        {
+                            <div class="column is-10">
+                                <a asp-page="/Debugger/Details" asp-route-txHash="@Model.Transaction.Hash" asp-route-ioIndex="@index" asp-route-ioType="input" asp-route-scriptType="1" class="button">Debug this script</a>
+                                <Partial name="_DebuggerInfo" />
+                            </div>
+                        }
+                    }
+                    <div class="column is-12">
+                        @if (typeScript != null)
+                        {
+                            <pre>
+{
+    code_hash: @typeScript.CodeHash,
+    args: @typeScript.Args,
+    hash_type: @typeScript.HashType
+}</pre>
+                        }
+                        else
+                        {
+                            <pre>null</pre>
+                        }
+                    </div>
+
+                    <div class="column is-2">
+                        Data
+                    </div>
+                    <div class="column is-12">
+                        <pre>@input.Data</pre>
                     </div>
                 </div>
             }
@@ -246,6 +287,7 @@
                 {
                     <div class="column is-5">
                         <a asp-page="/Debugger/Details" asp-route-txHash="@Model.Transaction.Hash" asp-route-ioIndex="@index" asp-route-ioType="output" asp-route-scriptType="1" class="button">Debug this script</a>
+                        <Partial name="_DebuggerInfo" />
                     </div>
                 }
 
