--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
 <body class="has-navbar-fixed-top">
     <header class="hero">
         <div class="hero-head">
-            <nav class="navbar has-shadow top-nav-bar is-fixed-top py-2" role="navigation" aria-label="main navigation">
+            <nav class="navbar has-shadow top-nav-bar is-fixed-top py-2" role="navigation" aria-label="main navigation" id="header-navbar">
                 <div class="navbar-brand">
                     <div class="navbar-item is--brand has-dropdown is-hoverable project-menu-container">
                         <div class="project-menu-link level m-2">
@@ -70,102 +70,18 @@
                     </span>
                 </div>
 
-                <div class="mx-4 my-2">
-                    <div class="heading my-0">Current Block</div>
-                    @if (Model.ActiveProject != null && ProcessManager.IsRunning(Model.ActiveProject))
-                    {
-                        <div class="title is-6">@Model.TipBlockNumber</div>
-                    }
-                    else
-                    {
-                        <div class="title is-6">NA</div>
-                    }
-                </div>
-
-                <div class="mx-4"></div>
-
-                <div class="mx-4 my-2">
-                    <div class="heading my-0">Epoch</div>
-                    @if (Model.EpochView != null)
-                    {
-                        <div class="title is-6">@Hex.HexToUInt64(Model.EpochView!.Number)</div>
-                    }
-                    else
-                    {
-                      <div class="title is-6">NA</div>
-                    }
-                </div>
-
-                <div class="navbar-menu navbar-end" id="navMenu">
-                    @if (Model.ActiveProject != null)
-                    {
-                        var isRunning = ProcessManager.IsRunning(Model.ActiveProject);
-                        <div class="py-2 mx-6">
-                            <div class="heading my-0">Status</div>
-                            @if (isRunning)
-                            {
-                                <div class="title is-6 has-text-running">running</div>
-                            }
-                            else
-                            {
-                                <div class="title is-6 has-text-stopped">stopped</div>
-                            }
-                        </div>
-
-                        @if (isRunning)
-                        {
-                            <form method="post">
-                                <button asp-page="/Projects/Stop" asp-route-id="@Model.ActiveProject.Id" class="button is-dark my-1 mx-2">
-                                    <span class="icon">
-                                        <i class="fas fa-pause"></i>
-                                    </span>
-                                </button>
-                            </form>
-                            <form method="post">
-                                <button asp-page="/Projects/Restart" asp-route-id="@Model.ActiveProject.Id" class="button is-dark my-1 mx-2">
-                                    <span class="icon">
-                                        <i class="fas fa-redo"></i>
-                                    </span>
-                                </button>
-                            </form>
-                        }
-                        else
-                        {
-                            <form asp-page="/Projects/Start" asp-route-id="@Model.ActiveProject.Id" method="post">
-                                <button class="button is-dark my-1 mx-2">
-                                    <span class="icon">
-                                        <i class="fas fa-play"></i>
-                                    </span>
-                                </button>
-                            </form>
-                        }
-                    }
-                    <span class="=navbar-item">
-                        <span class="nav-separator"></span>
-                    </span>
-                    <div class="dropdown is-hoverable is-right">
-                        <div class="dropdown-trigger">
-                            <span class="button is-dark my-1 mx-2 has-dropdown"aria-haspopup="true" aria-controls="dropdown-menu-process-info">
-                                <span class="icon is-small"><i class="fas fa-info"></i></span>
-                            </span>
-                        </div>
-                        <div class="dropdown-menu" id="dropdown-menu-process-info" role="menu" style="width: 280px ">
-                            <div class="dropdown-content" style="background-color: #7F519C;">
-                               <div class="dropdown-item">
-                                @{
-                                    foreach (var info in Model.ProcessInfo.Split("\n"))
-                                    {
-                                        <p>@info</p>
-                                    }
-                                }
-                               </div>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="button is-dark my-1 mx-2" asp-page="/Config/Index">
-                        <span class="icon is-small"><i class="fas fa-cog"></i></span>
-                    </a>
-                </div>
+                @if (Model.ActiveProject != null && ProcessManager.IsRunning(Model.ActiveProject))
+                {
+                    <script>
+                        var intervalId = setInterval(() => {
+                            $.get("/Home/NavbarStatus", (data) => {
+                                $(".navbar-status").remove();
+                                $("#header-navbar").append(data);
+                            });
+                        }, 5000);
+                    </script>
+                }
+                <Partial name="_NavbarStatus" />
             </nav>
         </div>
     </header>
