--- a/src/Tippy/Pages/Blocks/_Search.cshtml
+++ b/src/Tippy/Pages/Blocks/_Search.cshtml
@@ -1,6 +1,6 @@
 ﻿<form method="get" class="field has-addons">
     <div class="control" style="width: 580px;">
-        <input class="input" name="id" placeholder="Search by hash or number" />
+        <input class="input" name="id" id="search-field" placeholder="Search by hash or number" />
     </div>
     <div class="control">
         <button asp-page="./Details" class="button is-primary is-primary-button">
