Update gdb installation doc for macOS

--- a/src/Tippy/Pages/Doc/Debugger.cshtml
+++ b/src/Tippy/Pages/Doc/Debugger.cshtml
@@ -19,7 +19,7 @@
 
     <h3>On macOS</h3>
 
-<pre class="has-background-dark"><code>brew install gdb --build-from-source
+<pre class="has-background-dark"><code>brew install gdb --HEAD --build-from-source
 brew install ttyd</code></pre>
     
 </div>
