--- a/src/Tippy/Pages/Shared/_DebuggerInfo.cshtml
+++ b/src/Tippy/Pages/Shared/_DebuggerInfo.cshtml
@@ -11,7 +11,7 @@
                     <p>Debuger requires <code style="color: white;">ttyd</code> and <code style="color: white;">gdb 10</code>. To install them:</p>
                     @if (OperatingSystem.IsMacOS())
                     {
-                        <pre class="has-background-dark"><code style="color: white;">brew install gdb --build-from-source
+                        <pre class="has-background-dark"><code style="color: white;">brew install gdb --HEAD --build-from-source
 brew install ttyd</code></pre>
                     }
                     else
