Link miner address to its details page

--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -96,7 +96,11 @@
                     @if (Model.ActiveProject.Chain == Tippy.Core.Models.Project.ChainType.Dev)
                     {
                     <div class="heading">Miner</div>
-                    <div class="title is-5"><span style="font-size: 70%;">@Model.MinerAddress</span></div>
+                    <div class="title is-5">
+                        <a title="@Model.MinerAddress" style="font-size: 80%;" asp-page="/Addresses/Details" asp-route-address="@Model.MinerAddress">
+                            @Model.MinerAddress.Substring(0, 18)...@Model.MinerAddress.Substring(Model.MinerAddress.Length - 18, 18)
+                        </a>
+                    </div>
                     @if (Model.IsMinerRunning)
                     {
                         <form method="post" class="columns">
