--- a/src/Tippy/Pages/TxPool/Index.cshtml
+++ b/src/Tippy/Pages/TxPool/Index.cshtml
@@ -87,6 +87,20 @@
                         @hash
                     </a>
                 </div>
+
+                <div class="column is-1">
+                    <label>Denylist</label>
+                </div>
+                <div class="column is-11">
+                    <form method="post">
+                        <button asp-page="/DeniedTransactions/Create" asp-route-hash="@hash" asp-route-type="propose" class="button is-danger is-small" title="Disallow committing">
+                            <span class="icon">
+                                <i class="fas fa-ban"></i>
+                            </span>
+                            <span>Disallow proposing</span>
+                        </button>
+                    </form>
+                </div>
             </div>
             <partial name="_TxVerbosity" model="tx" />
         }
@@ -105,6 +119,20 @@
                     <a asp-page="/Transactions/Details" asp-route-txhash="@hash" class="hash-text">
                         @hash
                     </a>
+                </div>
+
+                <div class="column is-1">
+                    <label>Denylist</label>
+                </div>
+                <div class="column is-11">
+                    <form method="post">
+                        <button asp-page="/DeniedTransactions/Create" asp-route-hash="@hash" asp-route-type="commit" class="button is-danger is-small" title="Disallow committing">
+                            <span class="icon">
+                                <i class="fas fa-ban"></i>
+                            </span>
+                            <span>Disallow committing</span>
+                        </button>
+                    </form>
                 </div>
             </div>
             <partial name="_TxVerbosity" model="tx" />
