--- a/src/Tippy/Pages/TxPool/Index.cshtml
+++ b/src/Tippy/Pages/TxPool/Index.cshtml
@@ -20,6 +20,14 @@
         </form>
     </div>
 
+    @if ((TempData["Message"]?.ToString() ?? "").Length > 0)
+    {
+        <div class="notification is-success">
+            <button class="delete"></button>
+            <div>@TempData["Message"]</div>
+        </div>
+    }
+
     <div class="box info-box">
         <div class="columns is-multiline">
             <div class="column is-1">
