Update logo and icon

--- a/src/Tippy/Pages/Shared/_Layout.cshtml
+++ b/src/Tippy/Pages/Shared/_Layout.cshtml
@@ -160,20 +160,10 @@
                 </nav>
 
                 <div class="sidebar-toggler-container p-4">
-                    <div class="level px-2">
-                        <div class="level-left">
-                            <span class="">
-                                <img src="~/img/logo.png" width="40" />
-                                <strong>Tippy</strong>
-                            </span>
-                        </div>
-                        <div class="level-right">
-                            <!--
-                            <div id="sidebar-toggler-button">
-                                <span class="icon is-small"><i class="fa fa-angle-double-left"></i></span>
-                            </div>
-                            -->
-                        </div>
+                    <div class="has-text-centered">
+                        <figure class="is-inline-block">
+                            <img src="~/img/logo.png" width="100" />
+                        </figure>
                     </div>
                 </div>
             </aside>
