Do not force wrap Model.EpochView which could be empty

--- a/src/Tippy/Pages/Home/_EpochInfo.cshtml
+++ b/src/Tippy/Pages/Home/_EpochInfo.cshtml
@@ -3,12 +3,12 @@
 
 <div class="box" style="background-color: #6C5054">
     <div class="heading">Epoch</div>
-    <div class="title">@Hex.HexToUInt64(Model.EpochView!.Number)</div>
+    <div class="title">@Hex.HexToUInt64(Model.EpochView?.Number ?? "0x0")</div>
     <div class="heading">Block Index</div>
-    @{ var current = Model.TipBlockNumber - Hex.HexToUInt64(Model.EpochView!.StartNumber) + 1; }
+    @{ var current = Model.TipBlockNumber - Hex.HexToUInt64(Model.EpochView?.StartNumber ?? "0x0") + 1; }
     <div class="title is-5">@current</div>
     <div class="heading">Length</div>
-    <div class="title is-5">@Hex.HexToUInt64(Model.EpochView!.Length)</div>
+    <div class="title is-5">@Hex.HexToUInt64(Model.EpochView?.Length ?? "0x0")</div>
     <div class="heading">Compact Target</div>
-    <div class="title is-5">@Hex.HexToUInt32(Model.EpochView!.CompactTarget)</div>
+    <div class="title is-5">@Hex.HexToUInt32(Model.EpochView?.CompactTarget ?? "0x0")</div>
 </div>
