Read and use AppUrl

--- a/src/Tippy/Pages/Config/Index.cshtml
+++ b/src/Tippy/Pages/Config/Index.cshtml
@@ -27,6 +27,12 @@
                     </div>
                 </div>
 
+                <div class="field">
+                    <div class="control">
+                        <p class="help">App Url: @Model.AppUrl</p>
+                    </div>
+                </div>
+
                 <!--
                 <div class="field">
                     <div class="control">
