--- a/src/Tippy/Pages/Home/Index.cshtml
+++ b/src/Tippy/Pages/Home/Index.cshtml
@@ -60,7 +60,7 @@
                 <div class="heading">CKB RPC</div>
                 <div class="title is-5">http://localhost:@Model.ActiveProject.NodeRpcPort</div>
                 <div class="heading">Tippy RPC (<a href="https://github.com/nervosnetwork/tippy#api" target="_blank" style="text-transform: none;">document</a>)</div>
-                <div class="title is-5">http://localhost:5000/api</div>
+                <div class="title is-5">@Model.ApiUrl</div>
             </div>
         </div>
         @if (Model.IsNodeRunning)
